# rssbot-rs

./: Cargo.toml  README.en.md  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: github-release.yml  rust.yml
src/: client.rs  commands.rs  data.rs  feed.rs  fetcher.rs  gardener.rs  main.rs  opml.rs
src/commands/: export.rs  rss.rs  start.rs  sub.rs  unsub.rs
