[package]
name = "rssbot"
version = "2.0.0-alpha.11"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"

[features]
default = ["rustls"]

# enable this to set a subscription limit
hosted-by-iovxw = ["reqwest/trust-dns"]
native-tls = [
    # "tbot/default",
    "teloxide/native-tls",
    "hyper-proxy/default",
    "reqwest/default",
    "reqwest/native-tls-vendored",
    "reqwest/native-tls-alpn",
]
rustls = [
    # "tbot/rustls",
    "teloxide/rustls",
    "hyper-proxy/rustls",
    "reqwest/rustls-tls",
]

[build-dependencies]
ctl10n = "0.2.0"

[dependencies]
lazy_static = "1.4"
once_cell = "1.18"
anyhow = { version = "1.0.75", features = ["backtrace"] }
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tokio-stream = "0.1.14"
thiserror = "1.0.50"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.2"
quick-xml = { version = "0.31.0", features = ["encoding", "escape-html"] }
chrono = "0.4"
pinyin = "0.10"
either = "1.9"
atomicwrites = "0.4"
clap = { version = "4.4.7", features = ["derive"] }
teloxide = { version = "0.12.2", features = ["macros", "ctrlc_handler"], default-features = false }

# [dependencies.tbot]
# version = "0.6"
# git = "https://gitlab.com/SnejUgal/tbot.git"
# default-features = false
# features = ["proxy"]

[dependencies.hyper-proxy]
version = "0.9"
default-features = false

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip", "json"]
